Updated readme and made some small cosmetic changes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         ></script>
     </head>
     <body>
-        <section class="hero">
+        <header class="hero">
             <div class="container">
                 <h1 class="title">Generate a <span>random password</span></h1>
                 <p class="text">Never use an insecure password again</p>
             </div>
-        </section>
+        </header>
         <section class="passwords">
             <div class="container">
                 <form action="" class="options" id="options">
@@ -31,6 +31,7 @@
                             id="length"
                             min="8"
                             max="15"
+                            required
                         />
                     </div>
                     <div class="form-elem">
